--- a/LandingPage/main.css
+++ b/LandingPage/main.css
@@ -3,6 +3,81 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+/*--------------------top-bar(cabecalho)----------------*/
+
+.topbar{
+    width: 100%;
+    height: 100px;
+    display: flex;
+    background-color: #384C64;
+    position: fixed;
+    top: 0;
+    left: 0;
+    justify-content: center;
+    
+}
+
+.topbar .img-topbar
+{
+    height: 110;
+    width: 110px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.menu{
+    display: flex;
+    float: left;
+    height: 110px;
+    align-items: center;
+}
+
+.menu a{
+    font-family:'Open-sans';
+    font-size: 25px;
+    color: #bcbcbc;
+    text-transform: lowercase;
+    text-decoration: none;
+    display: inline-block;
+    margin: 50px 20px 0 20px;
+    font-weight: 400;
+    position: relative;
+}
+
+.menu a:first-child{
+    margin-left: 0;
+}
+
+.menu a:hover{
+    color: #6e9769;
+}
+
+.menu a::before{
+    content: '';
+    width: 100%;
+    height: 4px;
+    background-color: #6e9769;
+    display: block;
+    position: absolute;
+    bottom: -6px;
+    left: 0;
+    transition: all 0.2s ease-out;
+    transform: scale(0, 1);
+    transform-origin: center left;
+}
+
+.menu a:hover::before{
+    transform: scale(1,1);   
+}
+
+
+
+
+/*-----------------Corpo da Pagina - Pagina Home-----------------------*/
+
+
 body{
     width: 100vw;
     height: 100vh;
