--- a/LandingPage/main.css
+++ b/LandingPage/main.css
@@ -3,11 +3,91 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+/*--------------------top-bar(cabecalho)----------------*/
+
+.topbar{
+    width: 100%;
+    height: 100px;
+    display: flex;
+    background-color: #384C64;
+    position: fixed;
+    top: 0;
+    left: 0;
+    justify-content: center;
+    
+}
+
+.topbar .img-topbar
+{
+    height: 110;
+    width: 110px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.menu{
+    display: flex;
+    float: left;
+    height: 110px;
+    align-items: center;
+}
+
+.menu a{
+    font-family:'Open-sans';
+    font-size: 25px;
+    color: #bcbcbc;
+    text-transform: lowercase;
+    text-decoration: none;
+    display: inline-block;
+    margin: 50px 20px 0 20px;
+    font-weight: 400;
+    position: relative;
+}
+
+.menu a:first-child{
+    margin-left: 0;
+}
+
+.menu a:hover{
+    color: #6e9769;
+}
+
+.menu a::before{
+    content: '';
+    width: 100%;
+    height: 4px;
+    background-color: #6e9769;
+    display: block;
+    position: absolute;
+    bottom: -6px;
+    left: 0;
+    transition: all 0.2s ease-out;
+    transform: scale(0, 1);
+    transform-origin: center left;
+}
+
+.menu a:hover::before{
+    transform: scale(1,1);   
+}
+
+
+/*----------------------Footer-------------------*/
 body{
     width: 100vw;
     height: 100vh;
     background-color: aquamarine;
 }
+
+footer{
+    height: 15%;
+    width: 100%;
+    background-color:#3B4F66;
+    position: absolute;
+    bottom: 0;
+}
+
 .banner{
     width: 100%;
     height: 100%;
@@ -16,22 +96,34 @@ body{
     align-items: center;
 }
 
-.banner img{
-    width: 150px;
-    height: 78px;
+.LogoSemLegenda{
+    width: 10%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.LogoSemLegenda img{
+    width: 130px;
+    height: 40px;
+    margin-right: 40px;
 }
 
 .icones{
-    width: 50%;
+    width: 80%;
     height: 50%;
-    background-color: #384C64;
-    border-left: 2px solid #6E9769;
+    background-color: #3B4F66;
+    border-left: 2px solid #A17322;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
 }
 
-footer{
-    height: 20%;
-    width: 100%;
-    background-color: #384C64;
-    position: absolute;
-    bottom: 0;
+.icones img{
+    width: 40px;
+    height: 40px;
+    margin: 0 80px 0 80px;
 }
+
