--- a/LandingPage/contato.css
+++ b/LandingPage/contato.css
@@ -21,7 +21,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-color: #394d66;
+    background-color: #3B4F66;
 
 }
 
