--- a/LandingPage/main.css
+++ b/LandingPage/main.css
@@ -10,7 +10,7 @@
     width: 100%;
     height: 100px;
     display: flex;
-    background-color: #384C64;
+    background-color: #3B4F66;
     position: fixed;
     top: 0;
     left: 0;
@@ -23,6 +23,7 @@
     height: 110;
     width: 110px;
     display: flex;
+    margin-right: 50px;
     justify-content: center;
     align-items: center;
 }
@@ -111,7 +112,6 @@ footer{
 }
 
 .icones{
-    width: 80%;
     height: 50%;
     background-color: #3B4F66;
     border-left: 2px solid #A17322;
