--- a/LandingPage/trabalhe.css
+++ b/LandingPage/trabalhe.css
@@ -6,6 +6,168 @@
 
 /*--------------------top-bar(cabecalho)----------------*/
 
+.topbar{
+    width: 100%;
+    height: 100px;
+    display: flex;
+    background-color: #3B4F66;
+    position: fixed;
+    top: 0;
+    left: 0;
+    justify-content: center;
+    
+}
+
+.topbar .img-topbar
+{
+    height: 110;
+    width: 110px;
+    display: flex;
+    margin-right: 50px;
+    justify-content: center;
+    align-items: center;
+}
+
+.img-topbar-4sfe
+{
+    height: 50px;
+    width: 50px;
+    display: flex;
+    margin-right: 50px;
+    justify-content: center;
+    align-items: center;
+}
+
+.menu{
+    display: flex;
+    float: left;
+    height: 110px;
+    align-items: center;
+}
+
+.menu a{
+    font-family:'Open-sans';
+    font-size: 25px;
+    color: #bcbcbc;
+    text-transform: lowercase;
+    text-decoration: none;
+    display: inline-block;
+    margin: 50px 20px 0 20px;
+    font-weight: 400;
+    position: relative;
+}
+
+.menu a:first-child{
+    margin-left: 0;
+}
+
+.menu a:hover{
+    color: #6e9769;
+}
+
+.menu a::before{
+    content: '';
+    width: 100%;
+    height: 4px;
+    background-color: #6e9769;
+    display: block;
+    position: absolute;
+    bottom: -6px;
+    left: 0;
+    transition: all 0.2s ease-out;
+    transform: scale(0, 1);
+    transform-origin: center left;
+}
+
+.menu a:hover::before{
+    transform: scale(1,1);   
+}
 /*-----------------Corpo da Pagina - Pagina Home-----------------------*/
 
+
+.container
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height:100vh;
+}
+
+.container .container-sec
+
+{
+    display: flex;
+    height:400px;
+    width:500px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.container .container-sec .tc-img .tc-im
+{
+    display: flex;
+    justify-content: center;
+    align-items: center ;
+    width: 90;
+    height: 60vh;
+}
+
+button
+{
+    display: flex;
+    padding: 5px;
+    height: 40px;
+    align-items: center;
+    background-color: #5c7d;
+    border-radius: 5px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
 /*-----------------------Footer-----------------------*/
+
+footer{
+    height: 15%;
+    width: 100%;
+    background-color:#3B4F66;
+    position: absolute;
+    bottom: 0;
+}
+
+.banner{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.LogoSemLegenda{
+    width: 10%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.LogoSemLegenda img{
+    width: 130px;
+    height: 40px;
+    margin-right: 40px;
+}
+
+.icones{
+    height: 50%;
+    background-color: #3B4F66;
+    border-left: 2px solid #A17322;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+.icones img{
+    width: 40px;
+    height: 40px;
+    margin: 0 80px 0 80px;
+}
