--- a/LandingPage/main.css
+++ b/LandingPage/main.css
@@ -75,18 +75,135 @@
 
 
 
-body{
+
+/* --------------toda pagina------------- */
+.todaahome{
     width: 100vw;
-    height: 100vh;
-    background-color: aquamarine;
+    height: 200vh;
+    background-color: cyan;
 }
 
+/* -----------Conteudo Principal--------- */
+main{
+    background-color: blue;
+    width: 100%;
+    height: 100%;
+} 
+
+/* -------------section 1-------------- */
+
+.primeira{
+    background-color: white;
+    width: 100%;
+    height: 50%;
+}
+
+.imagemPrimeiraSection{
+    background-color: white;
+    width: 800px;
+    height: 448px;
+    position: absolute;
+    right: 0;
+    margin: 130px 10px 0 30px;
+
+}
+
+.conteudoPrimeiraSection{
+    background-color: white;
+    width: 35%;
+    height: 83%;
+    padding: 15px;
+    margin: 101px 0 0 20px;
+    position: absolute;
+
+} 
+
+.caixaConteudo{
+    background-color:white;
+    width: 300px;
+    height: 300px;
+    margin: 10px 0 0 10px;
+}
+
+.conteudoPrimeiraSection button{
+    height: 10%;
+    width: 60%;
+    top: 10px;
+    background-color: rgba(10,23,55,0.5);
+    font-size: medium;
+    color: white;
+    border: none;
+    position: absolute;
+    margin: 400px 0 0 60px;
+    border-radius: 40px;
+}
+
+.conteudoPrimeiraSection button:hover {
+    background-color: #368AEB;
+    cursor: pointer;
+  }
+
+
+/* ------------section 2---------------*/
+
+.segunda{
+    background-color: white;
+    top: 200vh;
+    width: 100%;
+    height: 50%;
+}
+
+.imagemSegundaSection{
+    background-color: white;
+    width: 800px;
+    height: 448px;
+    margin: 101px 0 0 20px;
+    position: absolute;
+}
+
+.conteudoSegundaSection{
+    background-color: white;
+    width: 35%;
+    height: 83%;
+    padding: 15px;
+    position: absolute;
+    right: 0;
+    margin: 130px 10px 0 30px;
+
+} 
+
+.caixaConteudo{
+    background-color:white;
+    width: 300px;
+    height: 300px;
+    margin: 10px 0 0 10px;
+}
+
+.conteudoSegundaSection button{
+    height: 10%;
+    width: 60%;
+    top: 10px;
+    background-color: rgba(10,23,55,0.5);
+    font-size: medium;
+    color: white;
+    border: none;
+    position: absolute;
+    margin: 400px 0 0 60px;
+    border-radius: 40px;
+}
+
+.conteudoSegundaSection button:hover {
+    background-color: #368AEB;
+    cursor: pointer;
+  }
+/* --------------Rodape--------------- */
 footer{
-    height: 15%;
+    height: 20%;
     width: 100%;
     background-color:#3B4F66;
     position: absolute;
     bottom: 0;
+    left: 0;
 }
 
 .banner{
