--- a/LandingPage/trabalhe.css
+++ b/LandingPage/trabalhe.css
@@ -2,6 +2,7 @@
 {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 /*--------------------top-bar(cabecalho)----------------*/
@@ -14,17 +15,17 @@
     position: fixed;
     top: 0;
     left: 0;
-    justify-content: center;
+    justify-content: space-evenly;
     
 }
 
 .topbar .img-topbar
 {
     height: 110;
-    width: 110px;
+    width: 250px;
     display: flex;
     margin-right: 50px;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
 }
 
@@ -41,7 +42,7 @@
 .menu{
     display: flex;
     float: left;
-    height: 110px;
+    height: 100px;
     align-items: center;
 }
 
@@ -49,7 +50,6 @@
     font-family:'Open-sans';
     font-size: 25px;
     color: #bcbcbc;
-    text-transform: lowercase;
     text-decoration: none;
     display: inline-block;
     margin: 50px 20px 0 20px;
@@ -82,35 +82,34 @@
 .menu a:hover::before{
     transform: scale(1,1);   
 }
+
+
 /*-----------------Corpo da Pagina - Pagina Home-----------------------*/
 
-
-.container
-{
+.trabalho {
     display: flex;
     justify-content: center;
     align-items: center;
-    height:100vh;
-}
-
-.container .container-sec
-
-{
-    display: flex;
-    height:400px;
-    width:500px;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    background-color: #fff;
+    height: 93.9vh;
+
 }
 
-.container .container-sec .tc-img .tc-im
+.trabalho .content{
+    max-width: 800px;
+    text-align: center;
+}
+.trabalho .content .imagem-logo
+{
+    height: 400px;
+    width: 600px;
+}
+.box 
 {
     display: flex;
-    justify-content: center;
-    align-items: center ;
-    width: 90;
-    height: 60vh;
+    justify-content:center;
+    align-items: center;
 }
 
 button
@@ -124,13 +123,14 @@ button
     margin-top: 10px;
     margin-bottom: 20px;
 }
+
 /*-----------------------Footer-----------------------*/
 
 footer{
     height: 15%;
     width: 100%;
     background-color:#3B4F66;
-    position: absolute;
+    position: relative;
     bottom: 0;
 }
 
@@ -170,4 +170,42 @@ footer{
     width: 40px;
     height: 40px;
     margin: 0 80px 0 80px;
+}
+
+/*-------Reponsividade----*/
+
+@media screen and (min-device-width : 320px) and (max-device-width : 568px)
+{
+    .topbar 
+    {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        height: 200px;
+        align-content: center;
+       justify-items: center;
+    }
+    
+    .trabalho 
+    {
+        display:flex;
+        height: 198.9vh;
+        width: 110vh;
+    }
+
+    .trabalho .content
+    {
+        max-width: 700px;
+    }
+
+    .box
+    {
+        margin-top: 50px;
+    }
+
+    button
+    {
+        height:100px;
+        font-size: 20px;
+        border-radius: 10px;
+    }
 }
