--- a/LandingPage/contato.css
+++ b/LandingPage/contato.css
@@ -1,143 +1,342 @@
-*{
-    margin: 0;
-    padding: 0;
-    
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-/*--------------------top-bar(cabecalho)-------------------*/
 
+/*--------------------top-bar(cabecalho)----------------*/
 
+.topbar {
+  width: 100%;
+  height: 100px;
+  display: flex;
+  background-color: #3b4f66;
+  position: fixed;
+  top: 0;
+  left: 0;
+  justify-content: space-evenly;
+}
+
+.topbar .img-topbar {
+  height: 110;
+  width: 250px;
+  display: flex;
+  margin-right: 50px;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.img-topbar-4sfe {
+  height: 50px;
+  width: 50px;
+  display: flex;
+  margin-right: 50px;
+  justify-content: center;
+  align-items: center;
+}
+
+.menu {
+  display: flex;
+  float: left;
+  height: 100px;
+  align-items: center;
+}
+
+.menu a {
+  font-family: "Open-sans";
+  font-size: 25px;
+  color: #bcbcbc;
+  text-decoration: none;
+  display: inline-block;
+  margin: 50px 20px 0 20px;
+  font-weight: 400;
+  position: relative;
+}
+
+.menu a:first-child {
+  margin-left: 0;
+}
+
+.menu a:hover {
+  color: #6e9769;
+}
+
+.menu a::before {
+  content: "";
+  width: 100%;
+  height: 4px;
+  background-color: #6e9769;
+  display: block;
+  position: absolute;
+  bottom: -6px;
+  left: 0;
+  transition: all 0.2s ease-out;
+  transform: scale(0, 1);
+  transform-origin: center left;
+}
+
+.menu a:hover::before {
+  transform: scale(1, 1);
+}
 
 /*-----------------Corpo da Pagina - Pagina de Contato-----------------------*/
 
-.conto-ajuste{
-    position: relative;
-}
-
 .contact {
-    position: relative;
-    min-height: 100px;
-    margin-top: 100px;
-    padding: 50px 100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    background-color: #3B4F66;
-
+  min-height: 100px;
+  margin-top: 100px;
+  padding: 50px 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: #3b4f66;
 }
 
-.contact .content{
-    max-width: 800px;
-    text-align: center;
+.contact .content {
+  max-width: 800px;
+  text-align: center;
 }
 
-.contact .content h2{
-    font-size: 36px;
-    font-weight: 500;
-    color: #394d66;    
+.contact .content h2 {
+  font-size: 36px;
+  font-weight: 500;
+  color: #394d66;
 }
 
-.contact .content .imagem-logo
-{
+.contact .content .imagem-logo {
+  height: 200px;
+  width: 200px;
+}
+
+.contact .content p {
+  font-weight: 300;
+  color: #8c97a5;
+  font-size: 30px;
+}
+
+.container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
+}
+
+.container .contactInfo {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+}
+
+.container .contactInfo .box {
+  position: relative;
+  padding: 20px 0;
+  display: flex;
+}
+
+.container .contactInfo .box .text {
+  display: flex;
+  margin-left: 20px;
+  font-size: 16px;
+  color: #fff;
+  flex-direction: column;
+  font-weight: 300;
+}
+.container .contactInfo .box .text h3 {
+  font-weight: 500;
+  font-size: 24px;
+  color: #69788a;
+}
+
+.contactform {
+  width: 40%;
+  padding: 40px;
+  background: #fff;
+}
+.contactform h2 {
+  font-size: 30px;
+  color: #333;
+  font-weight: 500;
+}
+
+.contactform .inputbox {
+  position: relative;
+  width: 100%;
+  margin-top: 10px;
+}
+
+.contactform .inputbox input,
+.contactform .inputbox textarea {
+  width: 100%;
+  padding: 5px 0;
+  font-size: 16px;
+  margin: 10px 0;
+  border: none;
+  border-bottom: 2px solid #333;
+  outline: none;
+  resize: none;
+}
+
+.contactform .inputbox span {
+  position: absolute;
+  left: 0;
+  padding: 5px 0;
+  font-size: 16px;
+  margin: 10px;
+  pointer-events: none;
+  transition: 0.2s;
+  color: #666;
+}
+
+.contactform .inputbox input:focus ~ span,
+.contactform .inputbox input:valid ~ span,
+.contactform .inputbox textarea:focus ~ span,
+.contactform .inputbox textarea:valid ~ span {
+  color: #b028dd;
+  font-size: 12px;
+  transform: translate(-30px);
+}
+
+contactform .inputbox input [type="submit"] {
+  width: 100px;
+  background: #00bcd4;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  padding: 10px;
+  font-size: 18px;
+}
+
+/* ---------------rodape-------------- */
+.rodape {
+  width: 100%;
+  background-color: #3b4f66;
+}
+
+.banner {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.LogoSemLegenda {
+  width: 10%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.LogoSemLegenda img {
+  width: 130px;
+  height: 40px;
+  margin-right: 40px;
+}
+
+.icones {
+  height: 50%;
+  background-color: #3b4f66;
+  border-left: 2px solid #a17322;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.icones img {
+  width: 40px;
+  height: 40px;
+  margin: 0 80px 0 80px;
+}
+
+/*-------Reponsividade----*/
+
+@media screen and (min-device-width: 320px) and (max-device-width: 568px) {
+  .topbar {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
     height: 200px;
-    width: 200px;
-}
-
-.contact .content p{
-    font-weight: 300;
-    color: #8c97a5 ;
-    font-size: 30px;
-}
-
-.container{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 30px;
-}
-
-.container .contactInfo{
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-}
-
-.container .contactInfo .box{
+    align-content: center;
+    justify-items: center;
     position: relative;
-    padding: 20px 0;
+  }
+
+  .topbar .img-topbar {
+    width: 60%;
+    margin-right: 0;
+  }
+
+  .menu a {
+    font-size: 20px;
+    margin: 10px 0 0 10px;
+  }
+
+  /*-------corpo----*/
+
+  .contato-ajuste {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    width: 100%;
+  }
+
+  .contact {
+    display: grid;
+    padding: 0;
+    margin-top: 0;
+  }
+
+  .contact .content p {
+    font-size: 25px;
+  }
+
+  .container {
+    display: grid;
+    align-items: center;
+  }
+
+  .container .contactInfo {
+    width: 100%;
+  }
+
+  .container .contactInfo .box {
+    justify-content: center;
+  }
+
+  .contactform {
+    width: 100%;
+  }
+
+  /*-----rodape------ */
+
+  .rodape {
+    width: 100%;
+    height: 7vh;
+    background-color: #3b4f66;
+  }
+
+  .banner {
+    width: 100%;
+    height: 100%;
     display: flex;
-}
-
-.container .contactInfo .box .text{
+    justify-content: space-around;
+    align-items: center;
+  }
+  .icones {
+    height: 100%;
+    width: 100%;
+    border: none;
     display: flex;
-    margin-left: 20px;
-    font-size: 16px;
-    color: #fff;
-    flex-direction: column;
-    font-weight: 300;
-}
-.container .contactInfo .box .text h3{
-    font-weight: 500;
-    font-size: 24px;
-    color: #69788a
-}
+    justify-content: space-around;
+    align-items: center;
+  }
 
-.contactform{
-    width: 40%;
-    padding: 40px;
-    background: #fff;
-}
- .contactform h2{
-     font-size: 30px;
-     color: #333;
-     font-weight: 500;
- }
-
- .contactform .inputbox{
-     position: relative;
-     width: 100%;
-     margin-top: 10px;
- }
-
- .contactform .inputbox input,
- .contactform .inputbox textarea{
-     width: 100%;
-     padding: 5px 0;
-     font-size: 16px;
-     margin: 10px 0;
-     border: none;
-     border-bottom: 2px solid #333;
-     outline: none;
-     resize: none;
- }
-
- .contactform .inputbox span{
-     position: absolute;
-     left: 0;
-     padding: 5px 0 ;
-     font-size: 16px;
-     margin: 10px;
-     pointer-events: none;
-     transition: 0.2s;
-     color: #666;
- }
-
- .contactform .inputbox input:focus ~ span,
- .contactform .inputbox input:valid ~ span,
- .contactform .inputbox textarea:focus ~ span,
- .contactform .inputbox textarea:valid ~ span{
-     color: #B028Dd;
-     font-size:12px;
-     transform: translate(-30px);
- }
-
- contactform .inputbox input [type="submit"]{
-     width: 100px;
-     background: #00bcd4;
-     color: #fff;
-     border: none;
-     cursor: pointer;
-     padding: 10px;
-     font-size: 18px;
+  .icones img {
+    width: 20px;
+    height: 20px;
+    margin: 0 0 0 0;
+  }
+  .LogoSemLegenda {
+    display: none;
+  }
 }
