--- a/LandingPage/trabalhe.css
+++ b/LandingPage/trabalhe.css
@@ -1,211 +1,255 @@
-*
-{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 /*--------------------top-bar(cabecalho)----------------*/
 
-.topbar{
-    width: 100%;
-    height: 100px;
-    display: flex;
-    background-color: #3B4F66;
-    position: fixed;
-    top: 0;
-    left: 0;
-    justify-content: space-evenly;
-    
+.topbar {
+  width: 100%;
+  height: 100px;
+  display: flex;
+  background-color: #3b4f66;
+  position: fixed;
+  top: 0;
+  left: 0;
+  justify-content: space-evenly;
 }
 
-.topbar .img-topbar
-{
-    height: 110;
-    width: 250px;
-    display: flex;
-    margin-right: 50px;
-    justify-content: space-evenly;
-    align-items: center;
+.topbar .img-topbar {
+  height: 110;
+  width: 250px;
+  display: flex;
+  margin-right: 50px;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
-.img-topbar-4sfe
-{
-    height: 50px;
-    width: 50px;
-    display: flex;
-    margin-right: 50px;
-    justify-content: center;
-    align-items: center;
+.img-topbar-4sfe {
+  height: 50px;
+  width: 50px;
+  display: flex;
+  margin-right: 50px;
+  justify-content: center;
+  align-items: center;
 }
 
-.menu{
-    display: flex;
-    float: left;
-    height: 100px;
-    align-items: center;
+.menu {
+  display: flex;
+  float: left;
+  height: 100px;
+  align-items: center;
 }
 
-.menu a{
-    font-family:'Open-sans';
-    font-size: 25px;
-    color: #bcbcbc;
-    text-decoration: none;
-    display: inline-block;
-    margin: 50px 20px 0 20px;
-    font-weight: 400;
-    position: relative;
+.menu a {
+  font-family: "Open-sans";
+  font-size: 25px;
+  color: #bcbcbc;
+  text-decoration: none;
+  display: inline-block;
+  margin: 50px 20px 0 20px;
+  font-weight: 400;
+  position: relative;
 }
 
-.menu a:first-child{
-    margin-left: 0;
+.menu a:first-child {
+  margin-left: 0;
 }
 
-.menu a:hover{
-    color: #6e9769;
+.menu a:hover {
+  color: #6e9769;
 }
 
-.menu a::before{
-    content: '';
-    width: 100%;
-    height: 4px;
-    background-color: #6e9769;
-    display: block;
-    position: absolute;
-    bottom: -6px;
-    left: 0;
-    transition: all 0.2s ease-out;
-    transform: scale(0, 1);
-    transform-origin: center left;
+.menu a::before {
+  content: "";
+  width: 100%;
+  height: 4px;
+  background-color: #6e9769;
+  display: block;
+  position: absolute;
+  bottom: -6px;
+  left: 0;
+  transition: all 0.2s ease-out;
+  transform: scale(0, 1);
+  transform-origin: center left;
 }
 
-.menu a:hover::before{
-    transform: scale(1,1);   
+.menu a:hover::before {
+  transform: scale(1, 1);
 }
-
 
 /*-----------------Corpo da Pagina - Pagina Home-----------------------*/
 
 .trabalho {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    background-color: #fff;
-    height: 93.9vh;
-
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: #fff;
+  height: 93.9vh;
 }
 
-.trabalho .content{
-    max-width: 800px;
-    text-align: center;
+.trabalho .content {
+  max-width: 800px;
+  text-align: center;
 }
-.trabalho .content .imagem-logo
-{
-    height: 400px;
-    width: 600px;
+.trabalho .content .imagem-logo {
+  height: 400px;
+  width: 600px;
 }
-.box 
-{
-    display: flex;
-    justify-content:center;
-    align-items: center;
+.box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-button
-{
-    display: flex;
-    padding: 5px;
-    height: 40px;
-    align-items: center;
-    background-color: #5c7d;
-    border-radius: 5px;
-    margin-top: 10px;
-    margin-bottom: 20px;
+button {
+  display: flex;
+  padding: 5px;
+  height: 40px;
+  align-items: center;
+  background-color: #5c7d;
+  border-radius: 5px;
+  margin-top: 10px;
+  margin-bottom: 20px;
 }
 
-/*-----------------------Footer-----------------------*/
-
-footer{
-    height: 15%;
-    width: 100%;
-    background-color:#3B4F66;
-    position: relative;
-    bottom: 0;
+/* ---------------rodape-------------- */
+.rodape {
+  width: 100%;
+  background-color: #3b4f66;
 }
 
-.banner{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.banner {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.LogoSemLegenda{
-    width: 10%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.LogoSemLegenda {
+  width: 10%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.LogoSemLegenda img{
-    width: 130px;
-    height: 40px;
-    margin-right: 40px;
+.LogoSemLegenda img {
+  width: 130px;
+  height: 40px;
+  margin-right: 40px;
 }
 
-.icones{
-    height: 50%;
-    background-color: #3B4F66;
-    border-left: 2px solid #A17322;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
+.icones {
+  height: 50%;
+  background-color: #3b4f66;
+  border-left: 2px solid #a17322;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.icones img{
-    width: 40px;
-    height: 40px;
-    margin: 0 80px 0 80px;
+.icones img {
+  width: 40px;
+  height: 40px;
+  margin: 0 80px 0 80px;
 }
 
 /*-------Reponsividade----*/
 
-@media screen and (min-device-width : 320px) and (max-device-width : 568px)
-{
-    .topbar 
-    {
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        height: 200px;
-        align-content: center;
-       justify-items: center;
-    }
-    
-    .trabalho 
-    {
-        display:flex;
-        height: 198.9vh;
-        width: 110vh;
-    }
+@media screen and (min-device-width: 320px) and (max-device-width: 568px) {
+  .topbar {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    height: 200px;
+    align-content: center;
+    justify-items: center;
+    position: relative;
+  }
 
-    .trabalho .content
-    {
-        max-width: 700px;
-    }
+  .topbar .img-topbar {
+    width: 60%;
+    margin-right: 0;
+  }
 
-    .box
-    {
-        margin-top: 50px;
-    }
+  .menu a {
+    font-size: 20px;
+    margin: 10px 0 0 10px;
+  }
 
-    button
-    {
-        height:100px;
-        font-size: 20px;
-        border-radius: 10px;
-    }
+  /*-------corpo----*/
+
+  .trabalho {
+    display: flex;
+    height: 58vh;
+    width: 100%;
+  }
+
+  .trabalho .content {
+    height: 100px;
+    width: 100px;
+  }
+
+  .trabalho .content .imagem-logo {
+    width: 40vh;
+    height: 20vh;
+  }
+
+  .box {
+    margin-top: 50px;
+  }
+
+  button {
+    height: 50px;
+    font-size: 20px;
+    border-radius: 10px;
+    padding: 10px;
+  }
+
+  /*-----rodapé----*/
+  .rodape {
+    width: 100%;
+    height: 7vh;
+    background-color: #3b4f66;
+  }
+
+  .banner {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+  .icones {
+    height: 100%;
+    width: 100%;
+    border: none;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+
+  .icones img {
+    width: 20px;
+    height: 20px;
+    margin: 0 0 0 0;
+  }
+  .LogoSemLegenda {
+    display: none;
+  }
+}
+
+@media screen and (min-device-width: 375px) and (max-device-width: 667px) {
+  .trabalho {
+    height: 63vh;
+  }
+}
+
+@media screen and (min-device-width: 414px) and (max-device-width: 736px) {
+  .trabalho {
+    height: 66vh;
+  }
 }
